# workshop_07

./: .gitignore  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/ETL/: extract.py  load.py  transformation.py
data/output/: output.xlsx
docs/: index.md
tests/: test_extract.py  test_load.py  test_transformation.py
